[tool.poetry]
name = "slack_click"
version = "0.1.0"
description = ""
authors = ["Jeremy Schulman <jeremy.schulman@mlb.com>"]

[tool.poetry.dependencies]
python = "^3.8"
slack-bolt = "^1.6.0"
click = "<8"
pyee = "^8.1.0"
first = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.23.1"
invoke = "^1.5.0"
black = "^21.5b1"
flake8 = "^3.9.2"
flake8-breakpoint = "^1.1.0"
pytest-cov = "^2.12.0"
pre-commit = "^2.13.0"
interrogate = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
